[package]
name = "prototype-natural-light"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.4"

panic-probe = { version = "0.3", features = ["print-defmt"] }

heapless = "0.7.16"

nmea = { version = "0.5.0", default-features = false, features = [
  "all-sentences",
] }

chrono = { version = "0.4.26", default-features = false }

libm = "0.2.7"
spa = "0.4.0"
smart-leds = "0.3.0"
ws2812-spi = "0.4.0"
embedded-graphics = { version = "0.8.1", features = ["defmt"] }

[dependencies.embassy-stm32]
package = "embassy-stm32"
git = "https://github.com/embassy-rs/embassy/"
rev = "7bff2ebab3b36cc922505e9db961840109c509ed"
features = ["defmt", "nightly", "stm32f411ce", "time-driver-any"]


[dependencies.embassy-executor]
package = "embassy-executor"
git = "https://github.com/embassy-rs/embassy/"
rev = "7bff2ebab3b36cc922505e9db961840109c509ed"
features = [
  "defmt",
  "nightly",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "integrated-timers",
]

[dependencies.embassy-time]
package = "embassy-time"
git = "https://github.com/embassy-rs/embassy/"
rev = "7bff2ebab3b36cc922505e9db961840109c509ed"
features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"]
