[package]
name = "prototype-natural-light"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"

defmt = "0.3"
defmt-rtt = "0.4"

panic-probe = { version = "0.3", features = ["print-defmt"] }

heapless = { version = "0.7.16", features = ["defmt-impl"] }

nmea = { version = "0.5.0", default-features = false, features = ["GNSS"] }

chrono = { version = "0.4.26", default-features = false }

libm = "0.2.7"
spa = "0.4.0"
smart-leds = "0.3.0"
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
static_cell = "1.2.0"

[dependencies.ws2812-async]
git = "https://github.com/kalkyl/ws2812-async"
rev = "200a75242dc03f81980deb4bf7a0c749a2e233d4"

[dependencies.embassy-stm32]
package = "embassy-stm32"
git = "https://github.com/embassy-rs/embassy/"
rev = "13f050167346ce262ea33c0757496b832c90fa58"
features = [
  "defmt",
  "chrono",
  "nightly",
  "stm32f411ce",
  "time-driver-any",
  "unstable-traits",
]


[dependencies.embassy-executor]
package = "embassy-executor"
git = "https://github.com/embassy-rs/embassy/"
rev = "13f050167346ce262ea33c0757496b832c90fa58"
features = [
  "defmt",
  "nightly",
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "integrated-timers",
]

[dependencies.embassy-time]
package = "embassy-time"
git = "https://github.com/embassy-rs/embassy/"
rev = "13f050167346ce262ea33c0757496b832c90fa58"
features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"]

[dependencies.embassy-embedded-hal]
package = "embassy-embedded-hal"
git = "https://github.com/embassy-rs/embassy/"
rev = "13f050167346ce262ea33c0757496b832c90fa58"
features = ["defmt"]
